I created the portfolio page using the bootstrap grid system. However, the images were overlapping before responding to breakpoint 768px so I added a media query to the css adding 1px of margin to the right of their column.I hope to find a better way to fix this issue before my next commit.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,7 @@ html {
 
 body {
     background-image: url("../imgs/Background.jpg");
-    background-size: cover;
+    background-size: 1500px 1000px;
 }
 
 main {
@@ -21,6 +21,10 @@ main {
 #me {
     height: 200px;
     width: 200px;
+}
+
+.project {
+    width: 350px;
 }
 
 .footer-copyright {
